Updated For Freelancer

--- a/app/src/main/res/layout/activity_download_the_apis.xml
+++ b/app/src/main/res/layout/activity_download_the_apis.xml
@@ -4,7 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".additionalSettings.DownloadTheApisActivity">
+    tools:context=".additionalSettings.DownloadApisFilesActivity">
+
+
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -115,38 +127,23 @@
 
 
     <TextView
-        android:id="@+id/textFileCounts"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="end|center"
-        android:text=""
-        android:maxLines="1"
-        android:textColor="@color/black"
-        android:textSize="13sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/textRemainging"
-        app:layout_constraintStart_toEndOf="@+id/textPercentageCompleted"
-        app:layout_constraintTop_toBottomOf="@+id/action_bar_root" />
-
-    <TextView
         android:id="@+id/textRemainging"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="24dp"
         android:gravity="end|center"
-        android:text=""
         android:maxLines="1"
-        android:visibility="invisible"
-        tools:visibility="visible"
+        android:text="-/-"
         android:textColor="@color/black"
         android:textSize="13sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textFileCounts"
-        app:layout_constraintTop_toBottomOf="@+id/action_bar_root" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textPercentageCompleted"
+        app:layout_constraintTop_toBottomOf="@+id/action_bar_root"
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerApiDownloads"
