--- a/app/src/main/res/layout-sw600dp/activity_splash.xml
+++ b/app/src/main/res/layout-sw600dp/activity_splash.xml
@@ -10,6 +10,16 @@
     tools:context=".Splash"
     tools:ignore="ExtraText">
 
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     <ImageView
@@ -26,12 +36,14 @@
         app:tint="@color/deep_blue_light"
         app:srcCompat="@drawable/ic_help_outline_24" />
 
-
+xc
 
     <ImageView
         android:id="@+id/splash_image"
         android:layout_width="80dp"
         android:layout_height="76dp"
+        app:civ_border_color="#3C3737"
+        app:civ_border_width="0.2dp"
         android:layout_centerInParent="true"
         android:layout_marginBottom="300dp"
         android:contentDescription="@string/todo"
