--- a/app/src/main/res/layout/activity_sync_powell.xml
+++ b/app/src/main/res/layout/activity_sync_powell.xml
@@ -7,10 +7,21 @@
     android:padding="@dimen/_15dp"
     tools:context=".additionalSettings.ReSyncActivity">
 
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/action_bar_root"
-        style="@style/toolbarBackGroundColor"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
@@ -401,7 +412,22 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textSynfromApiZip" />
+                app:layout_constraintTop_toBottomOf="@+id/divider26" />
+
+            <TextView
+                android:id="@+id/textUseindexChangeOrTimestamp"
+                style="@style/textColorStyle"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:elegantTextHeight="true"
+                android:gravity="start|center"
+                android:maxLines="1"
+                android:paddingStart="26dp"
+                android:text="Use Time stamp"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/divider27" />
 
             <TextView
                 android:id="@+id/textConfigfileOnline"
@@ -507,6 +533,16 @@
                 app:layout_constraintTop_toTopOf="@+id/textSyncOnFileChangeIntervals" />
 
             <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/imagSwtichUseIndexCahngeOrTimeStamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:alpha="1"
+                app:layout_constraintBottom_toBottomOf="@+id/textUseindexChangeOrTimestamp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textSyncOnFileChangeIntervals" />
+
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/imagSwtichEnableConfigFileOnline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -559,15 +595,6 @@
 
 
             <View
-                android:id="@+id/divider3344"
-                style="@style/dividerBackColor"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textSyncOnFileChangeIntervals" />
-
-            <View
                 android:id="@+id/divider11"
                 style="@style/dividerBackColor"
                 android:layout_width="0dp"
@@ -606,6 +633,28 @@
                 app:layout_constraintTop_toBottomOf="@+id/textSynfromApiZip" />
 
             <View
+                android:id="@+id/divider27"
+                style="@style/dividerBackColor"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginEnd="1dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textSyncOnFileChangeIntervals" />
+
+            <View
+                android:id="@+id/divider2756766"
+                style="@style/dividerBackColor"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginEnd="1dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textUseindexChangeOrTimestamp" />
+
+            <View
                 android:id="@+id/divider30"
                 style="@style/dividerBackColor"
                 android:layout_width="0dp"
@@ -632,7 +681,7 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider31"
+                app:layout_constraintTop_toBottomOf="@+id/divider2756766"
                 tools:ignore="RtlSymmetry" />
 
             <TextView
