--- a/app/src/main/res/layout/activity_tv_or_app_mode_page.xml
+++ b/app/src/main/res/layout/activity_tv_or_app_mode_page.xml
@@ -7,6 +7,18 @@
     android:background="#FBFAFA"
     tools:context=".additionalSettings.TvActivityOrAppMode">
 
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
@@ -84,6 +96,8 @@
                 android:id="@+id/imageView2"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
+                app:civ_border_color="#3C3737"
+                app:civ_border_width="0.2dp"
                 android:layout_marginTop="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
