--- a/app/src/main/res/layout/activity_wi_fi.xml
+++ b/app/src/main/res/layout/activity_wi_fi.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".QrPages.WiFiActivity">
 
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
